--- a/.gitignore
+++ b/.gitignore
@@ -59,7 +59,6 @@ report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 # Mock data
 **/mock*/**
 src/modules/offramp/handlers/mockofframOrderstatus
-README.md
 publickey.cer
 privatekey.pem
 
@@ -80,3 +79,4 @@ src/modules/Card/mock/webhook.json
 
 
 bash.sh
+.env.prod
